--- a/00-HTML-CSS-basics/2.1-2.5/Css/main2.css
+++ b/00-HTML-CSS-basics/2.1-2.5/Css/main2.css
@@ -1,11 +1,15 @@
-/*  SECTIONS  */
+*{
+
+  box-sizing: border-box;
+
+}
+
 .section {
   clear: both;
   padding: 0px;
   margin: 0px;
 }
 
-/*  COLUMN SETUP  */
 .col {
   display: block;
   float:left;
@@ -13,46 +17,52 @@
 }
 .col:first-child { margin-left: 0; }
 
-/*  GROUPING  */
 .group:before,
 .group:after { content:""; display:table; }
 .group:after { clear:both;}
 .group { zoom:1; /* For IE 6/7 */ }
-/*  GRID OF EIGHT  */
-.span_8_of_8 {
+
+.span_6_of_6 {
   width: 100%;
 }
 
-.span_7_of_8 {
-    width: 87.3%;
+.span_5_of_6 {
+    width: 83.06%;
 }
 
-.span_6_of_8 {
-    width: 74.6%;
+.span_4_of_6 {
+    width: 66.13%;
 }
 
-.span_5_of_8 {
-    width: 61.9%;
-}
-
-.span_4_of_8 {
+.span_3_of_6 {
     width: 49.2%;
 }
 
-.span_3_of_8 {
-    width: 36.5%;
+.span_2_of_6 {
+    width: 32.26%;
 }
 
-.span_2_of_8 {
-    width: 23.8%;
+.span_1_of_6 {
+    width: 15.33%;
 }
 
-.span_1_of_8 {
-    width: 11.1%;
-}
-
-/*  GO FULL WIDTH BELOW 480 PIXELS */
 @media only screen and (max-width: 480px) {
   .col {  margin: 1% 0 1% 0%; }
-  .span_1_of_8, .span_2_of_8, .span_3_of_8, .span_4_of_8, .span_5_of_8, .span_6_of_8, .span_7_of_8, .span_8_of_8 { width: 100%; }
+  .span_1_of_6, .span_2_of_6, .span_3_of_6, .span_4_of_6, .span_5_of_6, .span_6_of_6 { width: 100%; }
+}
+
+div.col:nth-child(1) {
+    padding-left: 25px;
+    font-weight: bold;
+}
+
+div.col:nth-child(2) {
+    padding-right: 200px;
+    padding-left: 50px;
+    line-height: 22px;
+}
+
+img{
+  display:block;
+  max-width: 100%;
 }
