--- a/00-HTML-CSS-basics/2.1-2.5/Css/main2.css
+++ b/00-HTML-CSS-basics/2.1-2.5/Css/main2.css
@@ -10,8 +10,9 @@
 
 .col {
   display: block;
-  float:left;
+  float: left;
   margin: 1% 0 1% 1.6%;
+  vertical-align: top;
 }
 .col:first-child { margin-left: 0; }
 
@@ -42,21 +43,6 @@
 
 .span_1_of_6 {
     width: 15.33%;
-}
-
-@media only screen and (max-width: 375px) {
-  .col {  margin: 1% 0 1% 0%; }
-  .span_1_of_6, .span_2_of_6, .span_3_of_6, .span_4_of_6, .span_5_of_6, .span_6_of_6 { width: 100%; }
-}
-
-@media only screen and (max-width: 480px) {
-  .col {  margin: 1% 0 1% 0%; }
-  .span_1_of_6, .span_2_of_6, .span_3_of_6, .span_4_of_6, .span_5_of_6, .span_6_of_6 { width: 100%; }
-}
-
-@media only screen and (max-width: 768px) {
-  .col {  margin: 1% 0 1% 0%; }
-  .span_1_of_6, .span_2_of_6, .span_3_of_6, .span_4_of_6, .span_5_of_6, .span_6_of_6 { width: 46%; }
 }
 
 div.text > div.col:nth-child(1) {
@@ -107,3 +93,17 @@ div.labeled-image:hover > .mouseover{
   opacity: 1;
 }
 
+@media only screen and (max-width: 375px) {
+  .col {  margin: 1% 0 1% 0%; }
+  .span_1_of_6, .span_2_of_6, .span_3_of_6, .span_4_of_6, .span_5_of_6, .span_6_of_6 { width: 100%; }
+}
+
+@media only screen and (max-width: 480px) {
+  .col {  margin: 1% 0 1% 0%; }
+  .span_1_of_6, .span_2_of_6, .span_3_of_6, .span_4_of_6, .span_5_of_6, .span_6_of_6 { width: 100%; }
+}
+
+@media only screen and (max-width: 768px) {
+  .col {  margin: 1% 0 1% 0%; }
+  .span_1_of_6, .span_2_of_6, .span_3_of_6, .span_4_of_6, .span_5_of_6, .span_6_of_6 { width: 46%; }
+}
