--- a/00-HTML-CSS-basics/2.1-2.5/Css/main2.css
+++ b/00-HTML-CSS-basics/2.1-2.5/Css/main2.css
@@ -9,12 +9,10 @@
 }
 
 .col {
-  display: block;
-  float: left;
+  display: inline-block;
   margin: 1% 0 1% 1.6%;
   vertical-align: top;
 }
-.col:first-child { margin-left: 0; }
 
 .group:before,
 .group:after { content:""; display:table; }
@@ -38,7 +36,7 @@
 }
 
 .span_2_of_6 {
-    width: 32.26%;
+    width: 31.00%;
 }
 
 .span_1_of_6 {
