--- a/00-HTML-CSS-basics/2.1-2.5/Css/main2.css
+++ b/00-HTML-CSS-basics/2.1-2.5/Css/main2.css
@@ -9,11 +9,10 @@
 }
 
 .col {
-  display: block;
-  float:left;
+  display: inline-block;
   margin: 1% 0 1% 1.6%;
+  vertical-align: top;
 }
-.col:first-child { margin-left: 0; }
 
 .group:before,
 .group:after { content:""; display:table; }
@@ -37,16 +36,11 @@
 }
 
 .span_2_of_6 {
-    width: 32.26%;
+    width: 31.00%;
 }
 
 .span_1_of_6 {
     width: 15.33%;
-}
-
-@media only screen and (max-width: 480px) {
-  .col {  margin: 1% 0 1% 0%; }
-  .span_1_of_6, .span_2_of_6, .span_3_of_6, .span_4_of_6, .span_5_of_6, .span_6_of_6 { width: 100%; }
 }
 
 div.text > div.col:nth-child(1) {
@@ -97,3 +91,17 @@ div.labeled-image:hover > .mouseover{
   opacity: 1;
 }
 
+@media only screen and (max-width: 375px) {
+  .col {  margin: 1% 0 1% 0%; }
+  .span_1_of_6, .span_2_of_6, .span_3_of_6, .span_4_of_6, .span_5_of_6, .span_6_of_6 { width: 100%; }
+}
+
+@media only screen and (max-width: 480px) {
+  .col {  margin: 1% 0 1% 0%; }
+  .span_1_of_6, .span_2_of_6, .span_3_of_6, .span_4_of_6, .span_5_of_6, .span_6_of_6 { width: 100%; }
+}
+
+@media only screen and (max-width: 768px) {
+  .col {  margin: 1% 0 1% 0%; }
+  .span_1_of_6, .span_2_of_6, .span_3_of_6, .span_4_of_6, .span_5_of_6, .span_6_of_6 { width: 46%; }
+}
