--- a/00-HTML-CSS-basics/2.1-2.5/Css/main.css
+++ b/00-HTML-CSS-basics/2.1-2.5/Css/main.css
@@ -47,6 +47,17 @@ nav {
   background-color: blue;
 }
 
+a:link {
+    text-decoration: none;
+    color: white;
+}
+
+a:visited {
+    text-decoration: none;
+    color: white;
+}
+
+
 section {
 
  display: inline-block;
