--- a/01-JS-DOM-APIs/1.1 - 1.4 - 1.6/css/main.css
+++ b/01-JS-DOM-APIs/1.1 - 1.4 - 1.6/css/main.css
@@ -1,3 +1,7 @@
+*{
+
+  font-family: sans-serif;
+}
 section{
 
   text-align: center;
@@ -7,5 +11,38 @@ section{
 .oculto {
   
   display: none;
+
+}
+
+header {
+  font-size: 20px;
+  text-align: center;
+  top:0;
+  width:100%;
+  padding:20px;
+  display: inline-block;
+}
+
+footer {
+  background-color: teal;
+  width: 100%;
+  bottom: 0;
+  position: fixed;
+}
+
+#chistesDel2008 {
+
+  box-sizing: border-box;
+  display: inline-block;
+  border: 2px dashed;
+  margin: 5px;
+  padding: 5px;
+  color: red;
+}
+
+button {
+
+  width: 100%;
+  height: 100%;
 
 }
