--- a/main.css
+++ b/main.css
@@ -1,7 +1,8 @@
 body{
 
-  background-image: url("img/nav.png");
+  background-image: url("img/nav2.png");
   color: white;
+  font-family: sans-serif;
 
 }
 
@@ -15,10 +16,20 @@ a:visited {
     color: white;
 }
 
-header, footer{
+a:hover {
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  border: none;
+  font: 40px "Anton", Helvetica, sans-serif;
+  color: rgb(255, 255, 255);
+  text-shadow: 0 0 20px rgb(254,252,201) , 10px -10px 30px rgb(254,236,133) , -20px -20px 40px rgb(255,174,52) , 20px -40px 50px rgb(236,118,12) , -20px -60px 60px rgb(205,70,6) , 0 -80px 70px rgb(151,55,22) , 10px -90px 80px rgb(69,27,14) ;
+}
+
+
+header, footer {
   font-size: 20px;
   text-align: center;
-  margin-top: 25px;
-  margin-bottom: 25px;
+  margin: 25px 0px;
 }
 
