--- a/03-MVC-AngularJS/3.1/views/add-movie.html
+++ b/03-MVC-AngularJS/3.1/views/add-movie.html
@@ -6,7 +6,7 @@
             <br>
             <input type="text" ng-model="year" onfocus="(this.type='date')" placeholder="Enter the year" ng-required="required" class="text-field"/>
             <br>
-            <input type="number" step="0.01" min="0.5" max="6" ng-model="duration" placeholder="Enter duration in hours" ng-required="required" class="text-field"/>
+            <input type="number" step="0.01" min="0.5" max="10000" ng-model="duration" placeholder="Enter duration in minutes" ng-required="required" class="text-field"/>
             <br>
             <input type="text" ng-model="cover" placeholder="Enter the path of the pic" ng-required="required" class="text-field"/>
             <br>
