--- a/03-MVC-AngularJS/3.1/views/edit-movie.html
+++ b/03-MVC-AngularJS/3.1/views/edit-movie.html
@@ -1,7 +1,7 @@
 <section class="input col-md-12">
     <div class="content-aside">
         <form ng-controller="editMovie" ng-submit="editMovie(position)" class="form constructor-form" id="form">
-            <h1 class="library-title">Hey, this movie is wrong isn't it? Why don't you help me to write it right?</h1>
+            <h1 class="library-title">Hey, this movie is wrong isn't it? Why don't you help me write it right?</h1>
             <input type="text" ng-model="name" placeholder="Enter Title of movie" ng-required="required" class="text-field" />
             <br>
             <input type="text" ng-model="year" onfocus="(this.type='date')" placeholder="Enter the year" ng-required="required" class="text-field"/>
